--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,7 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.60", features = ["cargo", "derive"] }
+hex = { version = "0.4.3", features = ["serde"] }
+inquire = "0.9.3"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
